Fixing width of Case study stats block on ie

--- a/content/themes/igcp/inc/scss/ie.scss
+++ b/content/themes/igcp/inc/scss/ie.scss
@@ -64,12 +64,12 @@
     // Case Study Stats
     .cst-Stats {
       @include break-min($md) {
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: auto !important;
+        margin-right: auto !important;
       }
       @include break-min($lg) {
-        margin-left: calc((-100vw / 2 + #{$restrained-width / 2}) + #{$gutter});
-        margin-right: calc((-100vw / 2 + #{$restrained-width / 2}) + #{$gutter});
+        margin-left: calc((-100vw / 2 + #{$restrained-width / 2}) + #{$gutter}) !important;
+        margin-right: calc((-100vw / 2 + #{$restrained-width / 2}) + #{$gutter}) !important;
       }
     }
 
